--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       </header>
 
       <main role="main" class="inner cover">
+		<div style="margin: 0 auto;"><img width="100px" src="images/check.png"></div>
+		<br>
         <h1 class="cover-heading">Thank you for voting!</h1>
         <!-- <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p> -->
         <!-- <p class="lead"> -->
